--- a/BienestarBovino/app/src/main/res/layout/produccion_peso.xml
+++ b/BienestarBovino/app/src/main/res/layout/produccion_peso.xml
@@ -181,16 +181,15 @@
         android:id="@+id/spinnerDieta"
         android:layout_width="274dp"
         android:layout_height="61dp"
-        android:layout_marginTop="420dp"
         android:contentDescription="@string/app_name"
         android:outlineAmbientShadowColor="#FFFFFF"
         android:outlineSpotShadowColor="#FFFFFF"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonPesoRegresar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.678"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.048" />
+        app:layout_constraintVertical_bias="0.64" />
 </androidx.constraintlayout.widget.ConstraintLayout>
