--- a/BienestarBovino/app/src/main/res/layout/estadistica_ventas.xml
+++ b/BienestarBovino/app/src/main/res/layout/estadistica_ventas.xml
@@ -61,8 +61,6 @@
         app:srcCompat="@drawable/_2459_1" />
 
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -70,9 +68,32 @@
         <!--Ui component for our bar chart-->
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/idBarChart"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="387dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="217dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="67dp" />
 
     </RelativeLayout>
+    <Button
+        android:id="@+id/btnRegVen"
+        android:layout_width="445dp"
+        android:layout_height="52dp"
+        android:background="#146304"
+        android:text="Regresar"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
