--- a/BienestarBovino/app/src/main/res/layout/estadistica_ventas.xml
+++ b/BienestarBovino/app/src/main/res/layout/estadistica_ventas.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".InformeVentasActivity"
+    android:background="#E1E0E0">
 
     <TextView
         android:id="@+id/textView52"
@@ -61,11 +63,9 @@
         app:srcCompat="@drawable/_2459_1" />
 
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".InformeVentasActivity">
 
         <!--Ui component for our bar chart-->
         <com.github.mikephil.charting.charts.BarChart
