--- a/BienestarBovino/app/src/main/res/layout/agregar_tarea.xml
+++ b/BienestarBovino/app/src/main/res/layout/agregar_tarea.xml
@@ -4,27 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WeightProductionActivity">
+    tools:context=".TaskActivity">
 
     <EditText
-        android:id="@+id/entryFechaTratamiento"
-        android:layout_width="304dp"
-        android:layout_height="50dp"
+        android:id="@+id/editDescripcionTarea"
+        android:layout_width="327dp"
+        android:layout_height="57dp"
         android:background="@drawable/rectangle_drawable"
         android:ems="10"
-        android:hint="Ingrese la fecha"
-        android:inputType="date"
-        android:minHeight="48dp"
+        android:hint="Notas"
+        android:inputType="text"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
-        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.236" />
+        app:layout_constraintVertical_bias="0.66" />
 
     <ImageView
         android:id="@+id/imageView20"
@@ -53,7 +51,7 @@
         app:layout_constraintVertical_bias="0.067" />
 
     <Button
-        android:id="@+id/buttonPesoRegister"
+        android:id="@+id/buttonTaskRegister"
         android:layout_width="414dp"
         android:layout_height="54dp"
         android:background="#656642"
@@ -70,7 +68,7 @@
         app:layout_constraintVertical_bias="0.914" />
 
     <Button
-        android:id="@+id/buttonPesoRegresar"
+        android:id="@+id/buttonTareaRegresar"
         android:layout_width="417dp"
         android:layout_height="49dp"
         android:background="#656642"
@@ -85,34 +83,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/textViewBovinoPeso"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tipo de tarea:"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.346" />
-
-    <TextView
-        android:id="@+id/textViewBovinoPeso4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Fecha de la realizacion de tarea:"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.167" />
-
     <Spinner
-        android:id="@+id/spinnerTarea"
+        android:id="@+id/spinnerEncargadoTarea"
         android:layout_width="324dp"
         android:layout_height="60dp"
         android:layout_marginTop="156dp"
@@ -121,42 +93,32 @@
         android:outlineSpotShadowColor="#FFFFFF"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonPesoRegresar"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonTareaRegresar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.448"
+        app:layout_constraintHorizontal_bias="0.413"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.473" />
+        app:layout_constraintVertical_bias="0.322" />
 
-    <TextView
-        android:id="@+id/textViewBovinoPeso3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Animal: "
-        android:textStyle="bold"
+    <EditText
+        android:id="@+id/entryFechaTarea"
+        android:layout_width="336dp"
+        android:layout_height="46dp"
+        android:background="@drawable/rectangle_drawable"
+        android:ems="10"
+        android:hint="Ingrese la fecha"
+        android:inputType="date"
+        android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textColorHint="@android:color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
+        app:layout_constraintHorizontal_bias="0.336"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.669" />
-
-    <Spinner
-        android:id="@+id/spinnerTarea1"
-        android:layout_width="324dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="156dp"
-        android:contentDescription="@string/app_name"
-        android:outlineAmbientShadowColor="#FFFFFF"
-        android:outlineSpotShadowColor="#FFFFFF"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonPesoRegresar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.448"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.256" />
+        app:layout_constraintVertical_bias="0.281" />
 
     <TextView
         android:id="@+id/textViewBovinoPeso2"
@@ -166,26 +128,35 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
+        app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.511" />
+        app:layout_constraintVertical_bias="0.411" />
 
-    <Spinner
-        android:id="@+id/spinnerTarea2"
-        android:layout_width="324dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="156dp"
-        android:contentDescription="@string/app_name"
-        android:outlineAmbientShadowColor="#FFFFFF"
-        android:outlineSpotShadowColor="#FFFFFF"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonPesoRegresar"
+    <TextView
+        android:id="@+id/textViewBovinoPeso3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Descripcion:"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.448"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.695" />
+        app:layout_constraintVertical_bias="0.58" />
+
+    <TextView
+        android:id="@+id/textViewBovinoPeso4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fecha de la realizacion de tarea:"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.209" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
