--- a/BienestarBovino/app/src/main/res/layout/tratamiento.xml
+++ b/BienestarBovino/app/src/main/res/layout/tratamiento.xml
@@ -77,7 +77,7 @@
         app:layout_constraintVertical_bias="0.512" />
 
     <EditText
-        android:id="@+id/entryFechaTratamiento"
+        android:id="@+id/entryFechaTarea"
         android:layout_width="304dp"
         android:layout_height="50dp"
         android:background="@drawable/rectangle_drawable"
