--- a/BienestarBovino/app/src/main/res/layout/vacunacion.xml
+++ b/BienestarBovino/app/src/main/res/layout/vacunacion.xml
@@ -45,7 +45,7 @@
         app:layout_constraintVertical_bias="0.914" />
 
     <Button
-        android:id="@+id/btnRegresarPersonal"
+        android:id="@+id/btnAgregarListaPersonal"
         android:layout_width="417dp"
         android:layout_height="49dp"
         android:background="#656642"
